# andy

linux-embedded/: CMakeLists.txt
linux-embedded/include/: uipc.h
linux-embedded/node-backend/: config.json  redis_adapter.js  robe.db  sqlite_adapter.js  web-api.js
linux-embedded/node-www/www/: index.html
linux-embedded/node-www/www/css/: app.css  coordinate.css  index.css  sensor.css  servo.css
linux-embedded/node-www/www/js/: index.js
linux-embedded/node-www/www/js/controllers/: mainController.js  robeController.js
linux-embedded/node-www/www/js/directives/: coordinate.js  servo.js
linux-embedded/node-www/www/js/factories/: robeFactory.js
linux-embedded/node-www/www/js/services/: cordovaService.js  robeService.js  serverService.js
linux-embedded/node-www/www/views/: robe_control.html
linux-embedded/node-www/www/views/templates/: coordinate.html  servo.html
linux-embedded/src/: CMakeLists.txt  robe.cpp  uipc.cpp
linux-embedded/src/dev/: servo-test  servo-test.c
realsense-sdk/: Rob-e.sln
realsense-sdk/Rob-e/: CameraBoundaries.cpp  CameraBoundaries.h  ClassDiagram.cd  CoordinatesProducerRS.cpp  CoordinatesProducerRS.h  Definitions.h  HttpClient.h  ICoordinatesListener.h  ICoordinatesProducer.h  INetworkClient.h  IRobotController.h  OpenCVCameraClient.cpp  OpenCVCameraClient.h  Rob-e.vcxproj  Rob-e.vcxproj.filters  RobotArmController.cpp  RobotArmController.h  RobotArmNetworkClient.cpp  RobotArmNetworkClient.h  RobotBoundaries.cpp  RobotBoundaries.h  RobotCoordinates.cpp  RobotCoordinates.h  test.cpp
